initial main.tf .gitignore and push over lock.hcl

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-terraform_kubeadm/terraform.*
-terraform_kubeadm/.terraform
-terraform_kubeadm/.terraform.*
+terraform.*
+.terraform
+#.terraform.*
 
